--- a/CampustoCareerReport2018.htm
+++ b/CampustoCareerReport2018.htm
@@ -45,7 +45,7 @@
 <link href="//cdn2.hubspot.net/hub/-1/hub_generated/template_assets/1495141902003/hubspot_default/shared/responsive/layout.min.css" rel="stylesheet">
 
 <!-- My linked file -->
-	<link rel="stylesheet" href="../css/Handshake_December2017-style.min.css" >
+	<link rel="stylesheet" href="css/Handshake_December2017-style.min.css" >
 
 <!--  How do I committ this? -->
 
